--- a/style.css
+++ b/style.css
@@ -8,9 +8,8 @@ body {
 
 .section-one {
     background-color: #1f2937;
-    height: 500px;
     display: flex;
-   flex-direction: column;
+    flex-direction: column;
 }
 
 .header {
@@ -18,20 +17,19 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 30px;
-    flex: 1 0 auto;
+    flex: 1 1 auto;
 }
 
 .one-mid {
     display: flex;
     align-items: center;
-    flex: 1 0 auto;
+    flex: 1 1 auto;
     justify-content: space-around;
     margin: 32px;
 }
 
 .one-left {
     width: 400px;
-    flex-shrink: 0;
     margin-right: 32px;
 }
 
@@ -87,24 +85,53 @@ p {
     flex-shrink: 0;
     margin: 32px;
 }
+
+img {
+    height: auto;
+    width: 500px;
+}
 /* section 1 end */
 
 .section-two {
     text-align: center;
-    height: 400px;
 }
 
 .content {
     display: flex;
     justify-content: center;
     gap: 32px;
+    flex-wrap: wrap;
+    margin-bottom: 32px;
 }
 
 .box {
     border: 5px solid #3882f6;
-    border-radius: 10px;
+    border-radius: 7px;
     width: 150px;
     height: 150px;
+}
+
+img[src*="choose"] {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+img[src*="place-order"] {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+img[src*="measure"] {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+img[src*="tshirt"] {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .section {
@@ -132,16 +159,15 @@ h2 {
     height: 300px;
     display: flex;
     justify-content: center;
+    align-items: center;
   
 }
 
 .quote-box {
-    max-width: 700px;
     display: flex;
     flex-direction: column;
-    padding: 30px;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
 }
 
 .quote {
@@ -155,6 +181,7 @@ h2 {
     font-size: 24px;
     align-self: flex-end;
     font-weight: 600;
+    margin: 10px;
 }
 
 
@@ -179,6 +206,7 @@ h2 {
 
 .four {
     border: 2px solid white;
+    flex-shrink: 0;
 }
 
 h3 {
